test_projects/parse_error/parse_error_a/src/parse_error_a_syntax_error.erl
-module(parse_error_a_syntax_error).
%% Syntax error for test purpose.
!!!! 
